[Do Not Merge] Enable EAPoL in wpa_supplicant from ConnMan
Change-Id: I989a709be71741973f19e00a6eaf1356463c19e3
Signed-off-by: Nishant Chaprana <n.chaprana@samsung.com>

--- a/configure.ac
+++ b/configure.ac
@@ -85,6 +85,11 @@ AC_ARG_ENABLE(tizen-ext-wifi-mesh,
 			[CFLAGS="$CFLAGS -DTIZEN_EXT_WIFI_MESH"], [enable_tizen_ext_wifi_mesh="no"])
 AM_CONDITIONAL(TIZEN_EXT_WIFI_MESH, test "${enable_tizen_ext_wifi_mesh}" != "no")
 
+AC_ARG_ENABLE(tizen-ext-eap-on-ethernet,
+	AC_HELP_STRING([--enable-tizen-ext-eap-on-ethernet], [enable TIZEN extensions for EAP on Ethernet]),
+			[CFLAGS="$CFLAGS -DTIZEN_EXT_EAP_ON_ETHERNET"], [enable_tizen_ext_eap_on_ethernet="no"])
+AM_CONDITIONAL(TIZEN_EXT_EAP_ON_ETHERNET, test "${enable_tizen_ext_eap_on_ethernet}" != "no")
+
 AC_ARG_ENABLE(tizen-maintain-online,
 	AC_HELP_STRING([--enable-tizen-maintain-online], [enable TIZEN extensions]),
 			[if (test "${enableval}" = "yes"); then
