--- a/configure.ac
+++ b/configure.ac
@@ -82,7 +82,9 @@ AM_CONDITIONAL(TIZEN_EXT, test "${enable-tizen-ext}" != "no")
 
 AC_ARG_ENABLE(tizen-ext-ins,
 	AC_HELP_STRING([--enable-tizen-ext-ins], [enable TIZEN extensions for INS]),
-			[CFLAGS="$CFLAGS -DTIZEN_EXT_INS"], [enable_tizen_ext_ins="no"])
+			[if (test "${enableval}" = "yes"); then
+				CFLAGS="$CFLAGS -DTIZEN_EXT_INS"
+			fi])
 AM_CONDITIONAL(TIZEN_EXT_INS, test "${enable_tizen_ext_ins}" != "no")
 
 AC_ARG_ENABLE(tizen-ext-wifi-mesh,
